Release history for Module-Metadata

1.000018   2013-09-11
  - re-release of detainting fix without unstated non-core test dependencies

1.000017   2013-09-10
  - detaint version, if needed (RT#88576, Chris Williams)

1.000016   2013-08-21
  - Re-release to fix prereqs and other metadata

1.000015   2013-08-21
  - Change wording about safety/security to satisfy CVE-2013-1437

1.000014   2013-05-09
  - Remove "now installs to 'site' for perl 5.12+" from last version

1.000013   2013-05-08
  - Fix reliance on recent Test::Builder
  - Make tests perl 5.6 compatible
  - now installs to 'site' for perl 5.12+, as per p5p recommendation

1.000012   2013-05-04
  - improved package detection heuristics (thanks, Edward Zborowski!)
  - fix ->contains_pod (RT#84932, Tokuhiro Matsuno)
  - fix detection of pod after __END__ (RT79656, Tokuhiro Matsuno)

1.000011   2012-08-16
  - LEONT++ hasn't found any issues with my changes; mark it done (or at
    least ready for smoking). (APEIRON)

1.000010_003   2012-08-16 01:00:00
  - Remove other spurious message (APEIRON)

1.000010_002   2012-08-15 20:15:00
  - APEIRON is an idiot (APEIRON)

1.000010_001   2012-08-15 20:00:00
  - Dev release to test removing a warning about modules not using the
    'eval $VERSION' syntax which causes lots of spew. (APEIRON)

1.000010   2012-07-29 19:30:00
  - Performance improvement: the creation of a Module::Metadata object
    for a typical module file has been sped up by about 40% (VPIT)
  - Fix t/metadata.t failure under Cygwin (JDHEDDEN)
  - Portability fix-ups for new_from_module() and test failures on VMS (CBERRY)

1.000009   2012-02-08 12:00:00
  - API of 'provides' changed to require a 'version' argument to future
    proof the function against CPAN Meta Spec changes (DAGOLDEN)
  - Fatal errors now use 'croak' instead of 'die'; Carp added as
    prerequisite (DAGOLDEN)

1.000008   2012-02-07 22:30:00
  - Adds 'provides' method to generate a CPAN META provides data structure